--- a/Lab3/src/main/resources/templates/demo/StaffList.html
+++ b/Lab3/src/main/resources/templates/demo/StaffList.html
@@ -9,8 +9,7 @@
     <img th:src="@{|/photos/${staff.photo}|}" style="height:40px">
     <b th:text="@{|${st.count}. |}"></b>
     <b th:text="${#strings.capitalizeWords(staff.fullname)}"></b>,
-    $<b th:text="${#numbers.formatDecimal(staff.salary, 0, 'COMMA', 2,
-'POINT')}"></b>
+    <b th:text="${#numbers.formatDecimal(staff.salary, 0, 'COMMA', 2,'POINT')}"></b>
     <th:block th:if="${!st.last}"><hr></th:block>
 </div>
 </body>
