--- a/Lab2/src/main/resources/templates/a.html
+++ b/Lab2/src/main/resources/templates/a.html
@@ -5,8 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-    <h1 th:text="${message} ?: 'No model message'"></h1>
-    <h1 th:text="${param.message} ?: 'No param message'"></h1>
+    <h1 th:text="${message}"></h1>
+    <h1 th:text="${param.message}"></h1>
 
 </body>
 </html>
