add GD1 FE + Lab5, 6

--- a/Lab4/src/main/resources/templates/home/about.html
+++ b/Lab4/src/main/resources/templates/home/about.html
@@ -8,7 +8,7 @@
 
 <body>
 <article>
-    <h1 th:text="#{title.about}">About</h1>
+    <h1 >Giới thiệu</h1>
     <ul>
         <li><h3>FPT Polytechnic</h3></li>
         <li><h3>Thực học - Thực nghiệp</h3></li>
