--- a/Lab4/src/main/resources/templates/home/index.html
+++ b/Lab4/src/main/resources/templates/home/index.html
@@ -8,7 +8,7 @@
 
 <body>
 <article>
-  <h1 th:text="#{title.home}">Home</h1>
+  <h1>Trang chủ</h1>
   <img src="/photos/photo.jpg" alt="photo" style="max-width:320px">
 </article>
 </body>
