--- a/Lab6/src/main/resources/templates/category/index.html
+++ b/Lab6/src/main/resources/templates/category/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h3>CATEGORY MANAGEMENT</h3>
-
+<p th:if="${error}" th:text="${error}" style="color:red"></p>
 <th:block th:replace="~{category/form :: form}"></th:block>
 <hr>
 <th:block th:replace="~{category/table :: table}"></th:block>
