--- a/Lab8/src/main/resources/templates/admin/reports.html
+++ b/Lab8/src/main/resources/templates/admin/reports.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Admin Reports</title>
+    <title>Admin Report</title>
 </head>
 <body>
-<h2>📊 Báo cáo hệ thống</h2>
-
+<h2>📊 Báo cáo hệ thống </h2>
+<p>CHưa có dữ liệu </p>
 </body>
 </html>
